Fixing the visibility of tags.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -210,7 +210,34 @@
   @include relative-font-size(1.5);
 }
 
+/* This is is a custom formatting that I have created for "posts" a.k.a. "tags" page. */
+.tag-list {
+  margin-bottom: 20px;
+}
 
+.posts-list-heading {
+  margin-bottom: 10px;
+}
+
+.posts-list {
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.posts-list li {
+  margin-bottom: 5px;
+}
+
+.posts-link {
+  text-decoration: none;
+  color: #333;
+}
+
+.posts-link:hover {
+  text-decoration: underline;
+}
 
 /**
  * Posts
